Added save buttons to time slots.

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -32,52 +32,52 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <table class="table">
+      <table class="table table-bordered">
         <tbody>
           <tr>
             <th scope="row">9AM</th>
             <td></td>
-            <td><i class="fas fa-save"></i></td>
+            <td><button type="button" class="btn btn-primary"><i class="fas fa-save"></i></button></td>
           </tr>
           <tr>
             <th scope="row">10AM</th>
             <td></td>
-            <td><i class="fas fa-save"></i></td>
+            <td><button type="button" class="btn btn-primary"><i class="fas fa-save"></i></button></td>
           </tr>
           <tr>
             <th scope="row">11AM</th>
             <td></td>
-            <td><i class="fas fa-save"></i></td>
+            <td><button type="button" class="btn btn-primary"><i class="fas fa-save"></i></button></td>
           </tr>
           <tr>
             <th scope="row">12PM</th>
             <td></td>
-            <td><i class="fas fa-save"></i></td>
+            <td><button type="button" class="btn btn-primary"><i class="fas fa-save"></i></button></td>
           </tr>
           <tr>
             <th scope="row">1PM</th>
             <td></td>
-            <td><i class="fas fa-save"></i></td>
+            <td><button type="button" class="btn btn-primary"><i class="fas fa-save"></i></button></td>
           </tr>
           <tr>
             <th scope="row">2PM</th>
             <td></td>
-            <td><i class="fas fa-save"></i></td>
+            <td><button type="button" class="btn btn-primary"><i class="fas fa-save"></i></button></td>
           </tr>
           <tr>
             <th scope="row">3PM</th>
             <td></td>
-            <td><i class="fas fa-save"></i></td>
+            <td><button type="button" class="btn btn-primary"><i class="fas fa-save"></i></button></td>
           </tr>
           <tr>
             <th scope="row">4PM</th>
             <td></td>
-            <td><i class="fas fa-save"></i></td>
+            <td><button type="button" class="btn btn-primary"><i class="fas fa-save"></i></button></td>
           </tr>
           <tr>
             <th scope="row">5PM</th>
             <td></td>
-            <td><i class="fas fa-save"></i></td>
+            <td><button type="button" class="btn btn-primary"><i class="fas fa-save"></i></button></td>
           </tr>
         </tbody>
       </table>
